--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.18",
     "apexcharts": "^3.44.0",
     "country-state-city": "^3.2.1",
+    "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
