--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^3.44.0",
     "country-state-city": "^3.2.1",
     "firebase": "^10.6.0",
+    "mui-tel-input": "^4.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
