--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@tanstack/react-query": "^5.8.7",
     "apexcharts": "^3.44.0",
     "country-state-city": "^3.2.1",
     "firebase": "^10.6.0",
