--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apexcharts": "^3.44.0",
     "country-state-city": "^3.2.1",
     "firebase": "^10.6.0",
+    "material-ui-popup-state": "^5.0.10",
     "mui-tel-input": "^4.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
