--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mui-tel-input": "^4.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.20.0"
