--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_projectId = engmedemo
 VITE_storageBucket = engmedemo.appspot.com
 VITE_messagingSenderId = 803065724217
 VITE_appId = 1:803065724217:web:0ce7f5ee1c881ec3e2bce8
+VITE_GOOGLE_API_KEY = AIzaSyDrOJ7sQqFrSr20Nd9CAOPDYezuIj9Gv_k
