--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@mui/material": "^5.14.18",
     "@tanstack/react-query": "^5.8.7",
     "apexcharts": "^3.44.0",
+    "axios": "^1.6.2",
     "country-state-city": "^3.2.1",
     "firebase": "^10.6.0",
+    "firebase-functions": "^4.5.0",
+    "googleapis": "^129.0.0",
     "material-ui-popup-state": "^5.0.10",
     "mui-tel-input": "^4.0.1",
     "react": "^18.2.0",
@@ -25,7 +28,8 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
