--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@ VITE_projectId = engmedemo
 VITE_storageBucket = engmedemo.appspot.com
 VITE_messagingSenderId = 803065724217
 VITE_appId = 1:803065724217:web:0ce7f5ee1c881ec3e2bce8
-VITE_GOOGLE_API_KEY = AIzaSyDrOJ7sQqFrSr20Nd9CAOPDYezuIj9Gv_k
+VITE_GOOGLE_API_KEY_OLD = AIzaSyDrOJ7sQqFrSr20Nd9CAOPDYezuIj9Gv_k
+VITE_GOOGLE_API_KEY = AIzaSyD1I8i6xzslCQWjmh1OgT0aHjBLn0UVbe0
+VITE_GOOGLE_CLIENT_ID_OLD = 1086856108835-5uidl1cqnhokrg2qirqn0mbvag83ceji.apps.googleusercontent.com
+VITE_GOOGLE_CLIENT_ID = 803065724217-780h75pk8cru5p7sa9ms9rl2s3al8ead.apps.googleusercontent.com
