--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@tanstack/react-query": "^5.8.7",
+    "@types/gapi": "^0.0.47",
     "apexcharts": "^3.44.0",
     "axios": "^1.6.2",
     "country-state-city": "^3.2.1",
     "firebase": "^10.6.0",
     "firebase-functions": "^4.5.0",
+    "google-calendar-api-client": "^0.0.5",
     "googleapis": "^129.0.0",
     "material-ui-popup-state": "^5.0.10",
     "mui-tel-input": "^4.0.1",
