--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ VITE_GOOGLE_API_KEY_OLD = AIzaSyDrOJ7sQqFrSr20Nd9CAOPDYezuIj9Gv_k
 VITE_GOOGLE_API_KEY = AIzaSyD1I8i6xzslCQWjmh1OgT0aHjBLn0UVbe0
 VITE_GOOGLE_CLIENT_ID_OLD = 1086856108835-5uidl1cqnhokrg2qirqn0mbvag83ceji.apps.googleusercontent.com
 VITE_GOOGLE_CLIENT_ID = 803065724217-780h75pk8cru5p7sa9ms9rl2s3al8ead.apps.googleusercontent.com
+VITE_ADMIN_EMAIL = admin@test.com
+VITE_EMAILJS_SERVICE_ID = service_html13r
+VITE_EMAILJS_TEMPLATE_ID = template_4pio4ik
+VITE_EMAILJS_PUBLIC_ID = hgfaA3mtLMMgedLa9
