--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@stripe/stripe-js": "^2.2.2",
     "@tanstack/react-query": "^5.8.7",
     "@types/gapi": "^0.0.47",
     "apexcharts": "^3.44.0",
