--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-pdf": "^7.6.0",
     "react-router-dom": "^6.20.0",
     "uuid": "^9.0.1"
   },
