--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@gsap/react": "^2.0.2",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@stripe/stripe-js": "^2.2.2",
@@ -25,6 +26,7 @@
     "firebase-functions": "^4.5.0",
     "google-calendar-api-client": "^0.0.5",
     "googleapis": "^129.0.0",
+    "gsap": "^3.12.4",
     "material-ui-popup-state": "^5.0.10",
     "mui-tel-input": "^4.0.1",
     "react": "^18.2.0",
