--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "googleapis": "^129.0.0",
     "gsap": "^3.12.4",
     "material-ui-popup-state": "^5.0.10",
+    "moment": "^2.30.1",
     "mui-tel-input": "^4.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
