--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apexcharts": "^3.44.0",
     "axios": "^1.6.2",
     "country-state-city": "^3.2.1",
+    "date-fns": "^3.3.1",
     "firebase": "^10.6.0",
     "firebase-functions": "^4.5.0",
     "google-calendar-api-client": "^0.0.5",
