--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.8.7",
     "@types/gapi": "^0.0.47",
     "apexcharts": "^3.44.0",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.2",
     "country-state-city": "^3.2.1",
     "date-fns": "^3.3.1",
@@ -31,13 +32,16 @@
     "material-ui-popup-state": "^5.0.10",
     "moment": "^2.30.1",
     "mui-tel-input": "^4.0.1",
+    "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-pdf": "^7.6.0",
+    "react-player": "^2.15.1",
     "react-router-dom": "^6.20.0",
+    "tailwindcss": "^3.4.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
