--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-pdf": "^7.6.0",
     "react-player": "^2.15.1",
     "react-router-dom": "^6.20.0",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3",
     "uuid": "^9.0.1"
   },
