--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "google-calendar-api-client": "^0.0.5",
     "googleapis": "^129.0.0",
     "gsap": "^3.12.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "material-ui-popup-state": "^5.0.10",
     "moment": "^2.30.1",
     "mui-tel-input": "^4.0.1",
